Modernized theme moin-pageline scaling corrected

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1337,9 +1337,9 @@ a.moin-nonexistent:hover
 
 #moin-pageline
     clear both
-    margin auto
+    margin 10px
     padding 0
-    width 98%
+    width auto
     height 1px
     border-bottom 1px solid heading_color
     border-top 1px solid heading_color
