Modernized theme fix index page menu initial display

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -777,6 +777,7 @@ ul.moin-blog-entry-tags li:last-child
     background page_color
     border border_style
     z-index 1
+    display none
 
 .moin-select-actions ul li
     display list-item
@@ -885,6 +886,7 @@ div.ct-hide
     background page_color
     border border_style
     padding .2em
+    display none
 
 .moin-contenttypes-wrapper ul li
     list-style-type none
