--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -358,7 +358,7 @@ ul.moin-blog-entry-tags li:last-child:after{content:""}
 .moin-select-allitem{display:inline-block;cursor:default;text-align:left}
 .allitem-selected:after{content:url("../img/moin-checkbox-on.png");margin:0 .2em}
 .allitem-toselect:after{content:url("../img/moin-checkbox-off.png");margin:0 .2em}
-.moin-select-actions ul{position:absolute;float:right;left:0;background:#fff;border:1px solid #4e7da9;z-index:1}
+.moin-select-actions ul{position:absolute;float:right;left:0;background:#fff;border:1px solid #4e7da9;z-index:1;display:none}
 .moin-select-actions ul li{display:list-item;list-style-type:none;padding:.5em;width:5em;cursor:pointer}
 .moin-select-actions ul li:hover{background-color:#eef1f6;color:#00008b}
 .moin-index-message{width:50%;margin:1em auto;text-align:center;display:none}
@@ -379,7 +379,7 @@ ul.moin-blog-entry-tags li:last-child:after{content:""}
 .moin-contenttypes-wrapper div{cursor:pointer;margin:.1em;padding:.5em 1.2em .5em .5em;height:1em}
 div.ct-shown{background:#d8dfe9 url("../img/moin-movedown.png") no-repeat center right;color:#000}
 div.ct-hide{background:transparent url("../img/moin-moveup.png") no-repeat center right}
-.moin-contenttypes-wrapper form{position:absolute;float:right;max-width:12.5em;border-top:1px solid #4e7da9;z-index:2;background:#fff;border:1px solid #4e7da9;padding:.2em}
+.moin-contenttypes-wrapper form{position:absolute;float:right;max-width:12.5em;border-top:1px solid #4e7da9;z-index:2;background:#fff;border:1px solid #4e7da9;padding:.2em;display:none}
 .moin-contenttypes-wrapper ul li{list-style-type:none;padding:.3em;min-width:11.5em}
 .moin-contenttypes-wrapper ul li label{display:inline;vertical-align:middle}
 .moin-contenttypes-wrapper ul li .helper-text{font-size:.7em;color:#737373;display:block}
