Duplicate templates removed from foobar

--- a/MoinMoin/templates/modify.html
+++ b/MoinMoin/templates/modify.html
@@ -1,6 +1,6 @@
 {% import "forms.html" as forms %}
 {% import "utils.html" as utils %}
-{% extends theme("layout.html") %}
+{% extends theme("show.html") %}
 
 {% from form.meta_template import meta_editor %}
 {# Import macros data_editor and extra_head from content_form's template.
