--- a/MoinMoin/templates/rename.html
+++ b/MoinMoin/templates/rename.html
@@ -1,5 +1,5 @@
 {% import "forms.html" as forms %}
-{% extends theme("layout.html") %}
+{% extends theme("show.html") %}
 
 {% set title = _("Rename '%(item_name)s'", item_name=item.name) %}
 
