--- a/MoinMoin/templates/modify_select_template.html
+++ b/MoinMoin/templates/modify_select_template.html
@@ -1,4 +1,4 @@
-{% extends theme("layout.html") %}
+{% extends theme("show.html") %}
 {% block content %}
 <h1>{{ _("Create new item?") }}</h1>
 <p>
