--- a/MoinMoin/templates/sitemap.html
+++ b/MoinMoin/templates/sitemap.html
@@ -1,4 +1,4 @@
-{% extends theme("layout.html") %}
+{% extends theme("show.html") %}
 
 {% set title = _("SiteMap of %(item_name)s", item_name=item_name) %}
 
