Modernized theme itemviews border removed

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1339,7 +1339,7 @@ a.moin-nonexistent:hover
 
 #moin-pageline
     clear both
-    margin 10px
+    margin 4px 10px
     padding 0
     width auto
     height 1px
@@ -1354,8 +1354,6 @@ a.moin-nonexistent:hover
     padding 2px 8px
     background panel_color
     font-size 0.8em
-    border-bottom border_style
-    border-top border_style
     border-radius 9px
     color selected_link_color
 
