Foobar theme Item-index-page non-functional actions removed

--- a/MoinMoin/themes/foobar/templates/index.html
+++ b/MoinMoin/themes/foobar/templates/index.html
@@ -21,6 +21,7 @@
             </div>
             <ul>
                 <li id="moin-create-newitem">{{ _("New item") }}</li>
+                {% if index %}
                 <li id="moin-download-trigger">{{ _("Download") }}</li>
                 <li class="moin-action-tab"
                     id="moin-delete-trigger"
@@ -32,6 +33,7 @@
                     data-actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
                     {{ _("Destroy") }}
                 </li>
+                {% endif %}
             </ul>
         </div>
         </li>
