modernized theme searchbar width fix

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1214,6 +1214,7 @@ a.moin-nonexistent:hover
     font-size 0.82em
     float right
     text-align right
+    width 15em
 
 #moin-searchform input
     font-size 100%
@@ -1250,7 +1251,7 @@ a.moin-nonexistent:hover
     margin 0
 
 #moin-search-query
-    width 98%
+    width 80%
 
 #moin-logo
     float left
