--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1474,6 +1474,9 @@ a.moin-nonexistent:hover
     a
         color footer_color
 
+#moin-pageinfo
+    margin-top 20px
+        
 #moin-timings li
     display inline-block
     margin 0 20px 0 0
@@ -1485,7 +1488,7 @@ a.moin-nonexistent:hover
 #moin-creditlogos
     float right
     list-style none
-    margin 0 10px
+    margin 5 10px
 
 #moin-creditlogos li
     display inline-block
