--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1,9 +1,11 @@
 //moin2 modernized theme css
+// stylus bug - https://github.com/LearnBoost/stylus/issues/790
+// do NOT end comment lines with colon until the bug is fixed
 
-// include a comment with a notice that the css file is automatically generated:
+// include a comment with a notice that the css file is automatically generated
 @import "stylus_notice.css"
 
-// reset all browser-specific default to have common defaults everywhere:
+// reset all browser-specific default to have common defaults everywhere
 @import "reset.css"
 
 // smileys used by moin wiki parser (and maybe others)
