--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -2,8 +2,8 @@
 // stylus bug - https://github.com/LearnBoost/stylus/issues/790
 // do NOT end comment lines with colon until the bug is fixed
 
-// include a comment with a notice that the css file is automatically generated
-@import "stylus_notice.css"
+// includes comments with notice regarding automatically generated css and licensing
+@import "notice.css"
 
 // reset all browser-specific default to have common defaults everywhere
 @import "reset.css"
