Foobar theme font changed

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -29,7 +29,7 @@
 // moin diff styling
 @import "moin_diff"
 
-font_family = verdana, sans-serif
+font_family = Helvetica, Arial, sans-serif
 main_font_size = 1em
 small_font_size = main_font_size * 0.8
 heading_scale = 1.2  // font size factor for h1 .. h6
@@ -54,9 +54,9 @@ body
     background-image url(../img/base.png)
 
 div p
-    margin .5em .2em
-    font-size .9em
-    line-height 1.2em
+    margin .2em .4em
+    font-size 1em
+    line-height 1.3em
 
 // the main elements - just the big picture first: panels, header, content, footer
 
