Foobar theme moin-breadcrumps padding changed

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -121,7 +121,7 @@ div p
 // header elements
 #moin-breadcrumbs-location
     float dir
-    padding 0.3em 0.5em 0.2em 0.5em
+    padding 0.5em
     font-weight bold
 
 #moin-interwiki
