--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -184,7 +184,7 @@ div p{margin:.2em .4em;font-size:1em;line-height:1.3em}
 #moin-content{float:left;width:76.79260476581759%;padding:.6162695152013148%;border-right:1px solid #ccc}
 #moin-local-panel{float:left;width:20.54231717337716%;padding:.6162695152013148%;margin-left:-1px;border-left:1px solid #ccc}
 #moin-footer{clear:both;font-size:.8em;color:#616161;padding:.5% .5%;overflow:auto}
-#moin-breadcrumbs-location{float:left;padding:.3em .5em .2em .5em;font-weight:bold}
+#moin-breadcrumbs-location{float:left;padding:.5em;font-weight:bold}
 #moin-interwiki{vertical-align:middle;}
 #moin-interwiki a{vertical-align:middle}
 #moin-pagelocation{vertical-align:middle}
