--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -419,6 +419,9 @@ form[name="delete_item"], form[name="rename_item"], form[name="destroy_item"]
         width 99.5%
     input[type="submit"]
         margin-left 0
+
+.moin-textcha
+    padding-top .2em
         
 #options
     dd
