--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -224,6 +224,7 @@ input.blank{border-color:#ccc;border-width:2px}
 #moin-modify dt,form[name="delete_item"] dt,form[name="rename_item"] dt,form[name="destroy_item"] dt{float:none;text-align:left;width:auto}
 #moin-modify input[type="submit"],form[name="delete_item"] input[type="submit"],form[name="rename_item"] input[type="submit"],form[name="destroy_item"] input[type="submit"]{margin-left:0}
 #moin-modify dl,form[name="delete_item"] dl,form[name="rename_item"] dl,form[name="destroy_item"] dl{margin:0}
+.moin-textcha{padding-top:.2em}
 #moin-options dd{float:none;width:38%;display:table-cell;padding:1.2em}
 #moin-options dt{margin-left:10%;text-align:left;width:61%;margin-top:1.3em}
 #moin-create-table{width:95%;margin-left:auto;margin-right:auto;border:none;}
