--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1452,6 +1452,7 @@ a.moin-nonexistent:hover
     width 16px
     overflow hidden
     cursor pointer
+    box-shadow none
 
 .moin-subitem-navigation .link-action
     background url(../img/moin-link.png) no-repeat center center
