--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -31,10 +31,12 @@
 
 html
     color font_color
-    font-family sans-serif
+    font-family Helvetica, Arial, sans-serif
 
 div, p
     margin 1em 0
+    font-size 1em
+    line-height 1.3em
 
 sub
     vertical-align sub
