Modernized theme sub-item padding changed

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1176,7 +1176,7 @@ body
     border-radius 9px
 
 #moin-content
-    padding 8px 25px
+    padding .2em 1em
     display table-cell
 
 a:link
@@ -1390,7 +1390,7 @@ a.moin-nonexistent:hover
     vertical-align middle
 
 .moin-subitem-navigation
-    padding 2px 4px
+    padding .9em
     background table_row_color
     margin 0
     vertical-align top
