Modernized theme header elements top padding changed

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1208,7 +1208,7 @@ a.moin-nonexistent:hover
     
 #moin-header
     margin 0px
-    padding 0px 0px 10px 0px
+    padding 7px 0px 10px 0px
     background header_bg_color
     color heading_color
     line-height 1.12em
@@ -1247,7 +1247,7 @@ a.moin-nonexistent:hover
     padding-right 20px
 
 #moin-searchform div
-    margin 0px 5px 0px 0px
+    margin -6px 5px 0px 0px
 
 #moin-long-searchform
     padding 0
@@ -1262,7 +1262,7 @@ a.moin-nonexistent:hover
 
 #moin-logo
     float left
-    margin 5px 10px
+    margin 2px 10px
     padding 0
     font-size 1.4em
     line-height 1em
@@ -1290,7 +1290,7 @@ a.moin-nonexistent:hover
     padding 0
     font-size 100%
     font-weight normal
-    margin 0.25em 12px 5px 12px
+    margin 0.3em .75em .3em .75em
 
 #moin-interwiki
     a
@@ -1299,9 +1299,10 @@ a.moin-nonexistent:hover
 #moin-pagelocation
     font-size 1.5em
     letter-spacing 0.05em
+    vertical-align middle
 
 #moin-pagetrail
-    margin 0 0.88em 0.25em 12px
+    margin 0 0.88em 0.25em .75em
     padding 0
     font-size 0.88em
     a
