--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -449,25 +449,25 @@ a:hover,a:active{text-decoration:underline;color:#1f9ae0}
 a.moin-nonexistent:link{color:#939393}
 a.moin-nonexistent:hover{color:#1f9ae0;text-decoration:underline}
 .current-link{color:inherit !important}
-#moin-header{margin:0;padding:0 0 10px 0;background:#708090;color:#fff;line-height:1.12em;border-bottom-left-radius:9px;border-bottom-right-radius:9px}
+#moin-header{margin:0;padding:7px 0 10px 0;background:#708090;color:#fff;line-height:1.12em;border-bottom-left-radius:9px;border-bottom-right-radius:9px}
 #moin-searchform{margin:8px .5em;padding:0;font-size:.82em;float:right;text-align:right;width:15em}
 #moin-searchform input{font-size:100%;vertical-align:middle;background-color:#fff;border:1px solid #4e7da9}
 #moin-searchform #moin-search-submit{text-indent:-9000%;margin-left:-26px;width:20px;height:16px;background:url("../img/moin-search.png") center center no-repeat;background-size:16px 16px;border:none;overflow:hidden;vertical-align:middle;cursor:pointer;padding:0;box-shadow:none}
 #moin-searchform #moin-search-query{padding-right:20px}
-#moin-searchform div{margin:0 5px 0 0}
+#moin-searchform div{margin:-6px 5px 0 0}
 #moin-long-searchform{padding:0;font-size:.82em;text-align:left}
 #moin-long-searchform div{margin:0}
 #moin-search-query{width:80%}
-#moin-logo{float:left;margin:5px 10px;padding:0;font-size:1.4em;line-height:1em;font-weight:bold}
+#moin-logo{float:left;margin:2px 10px;padding:0;font-size:1.4em;line-height:1em;font-weight:bold}
 #moin-logo img{vertical-align:middle}
 #moin-logo a{color:#fff;text-decoration:none}
 #moin-username{display:block;margin:0 12px 4px 12px;padding:0;font-size:.82em;}
 #moin-username a{color:#fff}
 #moin-username input:hover{color:#1f9ae0}
-#moin-locationline{padding:0;font-size:100%;font-weight:normal;margin:.25em 12px 5px 12px}
+#moin-locationline{padding:0;font-size:100%;font-weight:normal;margin:.3em .75em .3em .75em}
 #moin-interwiki a{color:#fff}
-#moin-pagelocation{font-size:1.5em;letter-spacing:.05em}
-#moin-pagetrail{margin:0 .88em .25em 12px;padding:0;font-size:.88em;}
+#moin-pagelocation{font-size:1.5em;letter-spacing:.05em;vertical-align:middle}
+#moin-pagetrail{margin:0 .88em .25em .75em;padding:0;font-size:.88em;}
 #moin-pagetrail a{color:#fff}
 .moin-pagepath a{color:#fff !important}
 #moin-navibar{clear:both;display:block;margin:0;padding:0 10px;font-size:.82em;color:#008b8b}
