Modernized theme moin-flash margin changed

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1130,7 +1130,7 @@ ul.moin-tags li.weight9
     font-size 200%
 
 #moin-flash
-    margin -8px -24px
+    margin -2px -15px -2px -14px
     
 .moin-flash
     margin 0
