--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -699,6 +699,9 @@ a.moin-conflict:before
 .moin-integer
     width 2%
 
+.moin-inline-label
+    display inline
+
 .moin-history-links
     width 5%
     a
