--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -58,6 +58,9 @@ ins
     text-align right
     padding-right 1em
 
+.moin-inline-label
+    display inline
+
 h1
     font-size 2em
     margin .67em 0
