--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -22,7 +22,7 @@ fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup,
 menu, nav, section, summary, time, mark, audio,
 video { margin: 0; padding: 0; border: 0; outline: 0;
-          font-size: 100%; vertical-align: baseline; background: transparent; }
+            font-size: 100%; vertical-align: baseline; background: transparent; }
 body { line-height: 1; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav,
 section { display: block; }
@@ -321,6 +321,7 @@ a.moin-conflict:before{content:url("../img/moin-conflict.png");margin:0 .2em}
 .moin-history-rename:before{content:url("../img/moin-renamed.png")}
 .moin-history-copy:before{content:url("../img/moin-new.png")}
 .moin-integer{width:2%}
+.moin-inline-label{display:inline}
 .moin-history-links{width:5%;}
 .moin-history-links a{display:block}
 .moin-history-editortext,.moin-history-links span,.moin-history-comment span{color:#d6d5d0;display:block;margin-bottom:5px}
@@ -377,22 +378,22 @@ ol.moin-upperroman-list{list-style-type:upper-roman}
 ol.moin-lowerroman-list{list-style-type:lower-roman}
 ul.moin-tags{list-style:none;}
 ul.moin-tags li{display:inline;}
-ul.moin-tags li.weight0{font-size:.4822530864197532em}
+ul.moin-tags li.weight0{font-size:.4822530864197531em}
 ul.moin-tags li.weight1{font-size:.5787037037037037em}
-ul.moin-tags li.weight2{font-size:.6944444444444445em}
+ul.moin-tags li.weight2{font-size:.6944444444444444em}
 ul.moin-tags li.weight3{font-size:.8333333333333334em}
 ul.moin-tags li.weight4{font-size:1em}
 ul.moin-tags li.weight5{font-size:1.2em}
 ul.moin-tags li.weight6{font-size:1.44em}
-ul.moin-tags li.weight7{font-size:1.7279999999999998em}
+ul.moin-tags li.weight7{font-size:1.728em}
 ul.moin-tags li.weight8{font-size:2.0736em}
-ul.moin-tags li.weight9{font-size:2.4883199999999994em}
-h1{font-size:1.7279999999999998em;margin:.5787037037037038em 0;border-bottom:3px solid #ccc;padding-bottom:3px}
+ul.moin-tags li.weight9{font-size:2.48832em}
+h1{font-size:1.728em;margin:.5787037037037037em 0;border-bottom:3px solid #ccc;padding-bottom:3px}
 h2{font-size:1.44em;margin:.6944444444444444em 0;border-bottom:3px solid #ccc;padding-bottom:3px}
 h3{font-size:1.2em;margin:.8333333333333334em 0;border-bottom:2px solid #ccc;padding-bottom:2px}
 h4{font-size:1em;margin:1em 0;border-bottom:2px solid #ccc;padding-bottom:2px}
 h5{font-size:.8333333333333334em;margin:1.2em 0;border-bottom:1px solid #ccc;padding-bottom:1px}
-h6{font-size:.6944444444444445em;margin:1.4399999999999997em 0;border-bottom:1px solid #ccc;padding-bottom:1px}
+h6{font-size:.6944444444444444em;margin:1.44em 0;border-bottom:1px solid #ccc;padding-bottom:1px}
 a.permalink{display:none;cursor:pointer;margin-left:.1em;color:#616161;}
 a.permalink:hover{color:#000}
 h1:hover .permalink,h2:hover .permalink,h3:hover .permalink,h4:hover .permalink,h5:hover .permalink,h6:hover .permalink{display:inline;text-decoration:none}
