Add 'Modify entry' link on a blog entry. It is displayed on the entry if the user has the right to modify this entry.

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -581,6 +581,9 @@ p.searchhint
     width 15em
     display table-cell
 
+.moin-blog-icon
+    font-size 1.6em
+
 .moin-blog-entry-info
     font-size 0.8em
     color footer_color
@@ -590,6 +593,11 @@ p.searchhint
     color footer_color
     padding 0em 1em
     border border_style
+
+.moin-blog-entry-modify
+    font-size 0.8em
+    margin 0
+    float right
 
 ul.moin-blog-entry-tags
     list-style none
