--- a/MoinMoin/templates/blog_layout.html
+++ b/MoinMoin/templates/blog_layout.html
@@ -11,6 +11,12 @@
     {% endif %}
     <h1><a href="{{ url_for('frontend.show_item', item_name=entry_item.name) }}"
         title="{{ title }}" class="moin-blog-entry-link">{{ title }}</a></h1>
+    {% if user.may.write(entry_item.name) %}
+        <div class="moin-blog-entry-modify">
+            <span class="moin-blog-icon">&#x2710;</span>
+            <a href="{{ url_for('frontend.modify_item', item_name=entry_item.name) }}">{{ _("Modify entry") }}</a>
+        </div>
+    {% endif %}
     <div class="moin-blog-entry-info">
         {% set publish_time = entry_item.meta['ptime'] %}
         {% if publish_time %}
