--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -573,13 +573,18 @@ p.searchhint
 #moin-blog-header
     margin 1em 0 -1em 0
 
+#moin-blog-body
+    display table
+    width 100%
+
 #moin-blog-content
     padding 0 2em 0 0
     display table-cell
+    width 80%
 
 #moin-blog-sidebar
-    width 15em
     display table-cell
+    width 20%
 
 .moin-blog-icon
     font-size 1.6em
