--- a/MoinMoin/templates/ticket.html
+++ b/MoinMoin/templates/ticket.html
@@ -7,9 +7,14 @@
     {% set title = _("Ticket: %(item_name)s", item_name=item_name) %}
 {% endif %}
 
+{% block head %}
+    {{ super() }}
+    <link media="all" rel="stylesheet" href="{{ url_for('frontend.template', filename='ticket.css') }}" />
+{% endblock %}
+
 {% block content %}
 <h1>{{ title }}</h1>
-<div class="moin-form">
+<div class="moin-form" id="moin-ticket-form">
     {{ gen.form.open(form, method='post', enctype='multipart/form-data') }}
 
     {% if data_rendered %}
