--- a/MoinMoin/templates/ticket.html
+++ b/MoinMoin/templates/ticket.html
@@ -9,7 +9,7 @@
 
 {% block head %}
     {{ super() }}
-    <link media="all" rel="stylesheet" href="{{ url_for('frontend.template', filename='ticket.css') }}" />
+    <link media="all" rel="stylesheet" href="{{ url_for('static', filename='css/ticket.css') }}" />
 {% endblock %}
 
 {% block content %}
