--- a/MoinMoin/templates/utils.html
+++ b/MoinMoin/templates/utils.html
@@ -48,22 +48,22 @@
 </table>
 {% endmacro %}
 
-{% macro _render_subitem_navigation_tree(subitems, newtab, parentcaller) %}
+{% macro _render_subitem_navigation_tree(index, newtab, parentcaller) %}
     <ul>
-        {% for fullname, shortname, contenttype, has_children in subitems %}
+        {% for e in index %}
             <li>
                 {# call our parent's caller with all the data we have if they exist, used to implement
                     transclude/link actions in the modify view #}
                 {% if parentcaller %}
-                    {{ parentcaller(fullname, shortname, contenttype, has_children) }}
+                    {{ parentcaller(e.meta['name'], e.relname, e.meta['contenttype'], e.hassubitems) }}
                 {% endif %}
-                <a href="{{ url_for('frontend.show_item', item_name=fullname) }}"
-                    title="{{ shortname }}" class="subitem-link"
-                    {% if newtab %}target="_blank"{% endif %}>{{ shortname }}</a>
-                {% if has_children %}
+                <a href="{{ url_for('frontend.show_item', item_name=e.meta['name']) }}"
+                    title="{{ e.relname }}" class="subitem-link"
+                    {% if newtab %}target="_blank"{% endif %}>{{ e.relname }}</a>
+                {% if e.hassubitems %}
                     <button class="expander" title="{{ _('Expand Subitem') }}"
                         onclick="toggleSubtree(this)"></button>
-                    {{ _render_subitem_navigation_tree(theme_supp.subitem_index(fullname), newtab, parentcaller) }}
+                    {{ _render_subitem_navigation_tree(theme_supp.subitem_index(e.meta['name']), newtab, parentcaller) }}
                 {% endif %}
             </li>
         {% endfor %}
