--- a/MoinMoin/templates/modify_select_itemtype.html
+++ b/MoinMoin/templates/modify_select_itemtype.html
@@ -5,10 +5,10 @@
 {{ _("Item '%(name)s' does not exist (yet), but you can try creating it now. Please select the type of the item you want to create.", name=item_name) }}
 </p>
 <table class="zebra">
-    {% for itname, itlabel, itdesc in itemtypes %}
+    {% for it in itemtypes %}
     <tr>
         <td>
-            <a href="{{ url_for('frontend.modify_item', item_name=item_name, itemtype=itname) }}">{{ itlabel }}</a> - {{ itdesc }}
+            <a href="{{ url_for('frontend.modify_item', item_name=item_name, itemtype=it.itemtype) }}">{{ it.display_name }}</a> - {{ it.description }}
         </td>
     </tr>
     {% endfor %}
