--- a/MoinMoin/templates/index.html
+++ b/MoinMoin/templates/index.html
@@ -123,7 +123,8 @@
                 <a href="{{ url_for('.download_item', item_name=e.meta['name'], mimetype=mimetype) }}" class="moin-download-link">
                 </a>
                 <a href="{{ url_for('.show_item', item_name=e.meta['name']) }}"
-                   class="{{ e.meta['contenttype']|contenttype_to_class }} moin-item"
+                   {# TODO .moin-itemtype-* classes are not styled yet #}
+                   class="{{ e.meta['contenttype']|contenttype_to_class }} moin-itemtype-{{ e.meta['itemtype'] }} moin-item"
                    title="{{ e.relname }}">
                    {{ e.relname|truncate(maxchars, true, '..') }}
                 </a>
