--- a/MoinMoin/templates/forms.html
+++ b/MoinMoin/templates/forms.html
@@ -55,6 +55,7 @@ Helpers for using flatland with jinja2 to create html forms.
       'submit': raw_input,
       'hidden': raw_input,
       'select': select,
+      'multi_select': multi_select,
       'readonly_string_list': readonly_string_list,
       'readonly_item_link_list': readonly_item_link_list,
   }[field.properties.widget] or stub -%}
@@ -162,6 +163,24 @@ Helpers for using flatland with jinja2 to create html forms.
     {{ gen.select.close() }}
     {{ render_errors(field) }}
   </dd>
+{% endmacro %}
+
+{% macro multi_select(field) %}
+  {% set valid_values = field.member_schema.valid_values %}
+  {% set labels = field.member_schema.properties.get('labels', {}) %}
+  {% set descriptions = field.member_schema.properties.get('helpers', {}) %}
+  {% for value in valid_values %}
+    <li>
+      {{ raw_input(field, 'checkbox', value=value) }}
+      {{ _valued_label(field, value, labels.get(value, value), class='moin-inline-label') }}
+      {% if descriptions[value] is defined %}
+        <span class="helper-text">
+          {{ descriptions[value] }}
+        </span>
+      {% endif %}
+    </li>
+  {% endfor %}
+  {{ render_errors(field) }}
 {% endmacro %}
 
 {% macro readonly_string_list(field) %}
