Refactor foobar templates for better code reusing.
local.html is gone. The "local" block is renmaed into local_panel and is now
rendered conditionally in layout.html; templates that need local panels no
longer need to extend from local.html. As a result, foobar's index.html now
extends from default index.html, avoiding code duplication.

The default "local" block implementation is moved to show.html.

--- a/MoinMoin/themes/foobar/templates/blog/layout.html
+++ b/MoinMoin/themes/foobar/templates/blog/layout.html
@@ -1,4 +1,4 @@
-{% extends theme("local.html") %}
+{% extends theme("layout.html") %}
 {% import theme("blog/utils.html") as blog_utils %}
 
 {% if blog_item %}
@@ -29,7 +29,7 @@
     {% endblock %}
 {% endblock %}
 
-{% block local %}
+{% block local_panel  %}
     <ul>
         {% if blog_name and supertags %}
         <li>
