--- a/MoinMoin/themes/foobar/templates/usersettings.html
+++ b/MoinMoin/themes/foobar/templates/usersettings.html
@@ -1,7 +1,7 @@
-{% extends theme("local.html") %}
+{% extends theme("layout.html") %}
 {% import "usersettings_forms.html" as user_forms %}
 
-{% block local %}
+{% block local_panel %}
 <ul id="moin-usersetting-title">
 <li class="moin-tab-title"><a href="#moin-personal">{{ _("Personal Settings") }}</a></li>
 <li class="moin-tab-title"><a href="#moin-password">{{ _("Change Password") }}</a></li>
