--- a/MoinMoin/templates/index.html
+++ b/MoinMoin/templates/index.html
@@ -12,58 +12,66 @@
     <script src="{{ url_for('frontend.template', filename='index_action.js') }}"></script>
 {% endblock %}
 
+{% block action_bars_inner %}
+    <ul>
+        {% if index %}
+        <li class="action-bar">
+        <div class="moin-select-all">
+            <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">{{ _("Select All") }}</span>
+        </div>
+        </li>
+        {% endif %}
+        <li class="action-bar">
+        <div class="moin-select-actions">
+            <div>
+                <span class="show-action">Actions</span>
+            </div>
+            <ul>
+                <li id="moin-create-newitem">{{ _("New item") }}</li>
+                {% if index %}
+                <li id="moin-download-trigger">{{ _("Download") }}</li>
+                <li class="moin-action-tab"
+                    id="moin-delete-trigger"
+                    data-actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">
+                    {{ _("Delete") }}
+                </li>
+                <li class="moin-action-tab"
+                    id="moin-destroy-trigger"
+                    data-actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
+                    {{ _("Destroy") }}
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+        </li>
+        <li class="action-bar">
+        <div class="moin-contenttypes-wrapper">
+            <div class="ct-hide">{{ _("Filter by content type") }}</div>
+            {% set unknown_items_label = _("items having unknown mime types") %}
+            {{ gen.form.open(form, method="get", action=url_for('frontend.index', item_name=item_name)) }}
+            <ul>
+                <li>
+                    <a href="#" class="filter-toggle">&raquo; {{ _("Toggle") }}</a>
+                    <a href="#" class="filter-more">&raquo; {{ _("More") }}</a>
+                </li>
+                {{ forms.render(form['contenttype']) }}
+            </ul>
+            {{ forms.render(form['submit']) }}
+            {{ gen.form.close() }}
+        </div>
+        </li>
+    </ul>
+{% endblock %}
+
+{% block action_bars %}
+    <div class="moin-align-right">
+        {{ self.action_bars_inner() }}
+    </div>
+{% endblock %}
+
 {% block content %}
     <div class="moin-index-message"><span></span></div>
-    <div class="moin-align-right">
-        <ul>
-            {% if index %}
-            <li class="action-bar">
-            <div class="moin-select-all">
-                <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">{{ _("Select All") }}</span>
-            </div>
-            </li>
-            {% endif %}
-            <li class="action-bar">
-            <div class="moin-select-actions">
-                <div>
-                    <span class="show-action">Actions</span>
-                </div>
-                <ul>
-                    <li id="moin-create-newitem">{{ _("New item") }}</li>
-                    {% if index %}
-                    <li id="moin-download-trigger">{{ _("Download") }}</li>
-                    <li class="moin-action-tab"
-                        id="moin-delete-trigger"
-                        data-actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">
-                        {{ _("Delete") }}
-                    </li>
-                    <li class="moin-action-tab"
-                        id="moin-destroy-trigger"
-                        data-actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
-                        {{ _("Destroy") }}
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-            </li>
-            <li class="action-bar">
-            <div class="moin-contenttypes-wrapper">
-                <div class="ct-hide">{{ _("Filter by content type") }}</div>
-                {% set unknown_items_label = _("items having unknown mime types") %}
-                {{ gen.form.open(form, method="get", action=url_for('frontend.index', item_name=item_name)) }}
-                <ul>
-                    <li>
-                        <a href="#" class="filter-toggle">&raquo; {{ _("Toggle") }}</a>
-                        <a href="#" class="filter-more">&raquo; {{ _("More") }}</a>
-                    </li>
-                    {{ forms.render(form['contenttype']) }}
-                </ul>
-                {{ forms.render(form['submit']) }}
-                {{ gen.form.close() }}
-            </div>
-            </li>
-        </ul>
-    </div>
+    {{ self.action_bars() }}
     <div>
     {% if item_name: %}
         <h1>{{ title }}</h1>
@@ -132,7 +140,7 @@
     <div id="popup">
         <div id="popup-for-action" class="popup-container">
             <div class="popup-header">
-                <div class="popup-closer popup-cancel" title="{{ _("Close") }}">x</div>
+                <input type="button" class="popup-closer popup-cancel" value="{{ _("X") }}" title="{{ _("Close") }}"/>
                 <span>{{ _("Please provide comment for this action") }}</span>
             </div>
             <div class="popup-body">
@@ -145,7 +153,7 @@
         </div>
         <div id="popup-for-newitem" class="popup-container">
             <div class="popup-header">
-                <div class="popup-closer popup-cancel" title="{{ _("Close") }}">x</div>
+                <input type="button" class="popup-closer popup-cancel" value="{{ _("X") }}" title="{{ _("Close") }}"/>
                 <span>{{ _("Create new item") }}</span>
             </div>
             <div class="popup-body">
