--- a/MoinMoin/themes/foobar/templates/show.html
+++ b/MoinMoin/themes/foobar/templates/show.html
@@ -1,4 +1,4 @@
-{% extends theme("local.html") %}
+{% extends theme("layout.html") %}
 
 {% block head_links %}
     {{ super() }}
@@ -17,6 +17,38 @@
     </div>
     {% endif %}
     {% endblock %}
+{% endblock %}
+
+{% block local_panel %}
+    <ul>
+        <li class="panel">Views
+            {{ itemviews }}
+        </li>
+        {% if rev %}
+        <li id="moin-metadata">Metadata
+            <ul>
+                <li>{{ _("Revision:") }} {{rev.revid | shorten_id}}</li>
+                <li>({{ rev.meta['mtime']|datetimeformat }})</li>
+                <li>{{ _("By:") }} {{ utils.editor_info(rev.meta) }}</li>
+                <li>{{ _("Size:") }} {{ rev.meta['size'] }}</li>
+                <li>{{ _("Type:") }} {{ rev.meta['contenttype'] }}</li>
+                {% if rev.meta.tags %}
+                <li>
+                {{ _("Tags:") }}
+                {% for tag in rev.meta.tags -%}
+                <a href="{{ url_for('frontend.tagged_items', tag=tag) }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
+                {%- endfor -%}
+                </li>
+                {% endif %}
+            </ul>
+        </li>
+        {% endif %}
+        <li>
+            {% block subitem_navigation %}
+            {{ utils.render_subitem_navigation(item_name, False) }}
+            {% endblock %}
+        </li>
+    </ul>
 {% endblock %}
 
 {% block options_for_javascript %}
