fix IE9 display of input value text on Modify, Delete, Destroy, Login, etc.

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -269,7 +269,7 @@ input.blank
     button,
     input[type="submit"]
         clear both
-        display table
+        display block
         margin auto
 
 #moin-modify, form[name="delete_item"], form[name="rename_item"], form[name="destroy_item"]
