--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -406,7 +406,7 @@ input.blank
     button,
     input[type="submit"]
         clear both
-        display table
+        display block
         margin auto
 
 form[name="delete_item"], form[name="rename_item"], form[name="destroy_item"]
