--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1186,20 +1186,14 @@ a.moin-nonexistent:hover
     border-bottom-right-radius 9px
 
 #moin-searchform
-    margin 8px .5em
+    margin 2px 12px 0px 0px
     padding 0
     font-size 0.82em
     float right
     text-align right
     width 15em
 
-#moin-searchform input
-    font-size 100%
-    vertical-align middle
-    background-color page_color
-    border border_style
-
-#moin-searchform #moin-search-submit
+#moin-search-submit
     text-indent -9000%
     margin-left -26px
     width 20px
@@ -1213,11 +1207,13 @@ a.moin-nonexistent:hover
     padding 0px
     box-shadow none
 
-#moin-searchform #moin-search-query
+#moin-search-query
     padding-right 20px
+    font-size 100%
+    vertical-align middle
+    background-color page_color
+    border border_style
 
-#moin-searchform div
-    margin -6px 5px 0px 0px
 
 #moin-long-searchform
     padding 0
