--- a/MoinMoin/templates/base.html
+++ b/MoinMoin/templates/base.html
@@ -3,6 +3,13 @@
 {%- set head = snippets.head() %}
 {%- set scripts = snippets.scripts() %}
 {%- set stylesheets = snippets.stylesheets() %}
+
+{# This allows child templates passing their header_search macro to the common layout (eg blog).
+   If there is no header_search macro defined in child templates use the default one. #}
+{% if not header_search %}
+    {% from "utils.html" import header_search %}
+{% endif %}
+
 <html>
 <head>
 {% block head %}
