--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -83,7 +83,7 @@ p
     background-color header_bg_color
     color heading_color
     border-bottom border_style
-    padding 0.2% 0.5%
+    padding 0
     overflow auto
     a
         color heading_color
@@ -133,13 +133,6 @@ p
     vertical-align middle
 
 .moin-pagepath
-    vertical-align middle
-
-#moin-search
-    float opposite-position(dir)
-    padding 0.3em 0.5em 0.2em 0.5em
-
-#moin-search-submit
     vertical-align middle
 
 // panels, footer
@@ -759,19 +752,20 @@ a
 
 // search
 #moin-searchform
-    padding 0
+    margin 7px 12px 0px 0px
     font-size 0.82em
-    float right
     text-align right
+    float opposite-position(dir)
+    padding 0
+    width 15em
     input
         font-size 1em
         vertical-align middle
         background-color page_color
-        border border_style
-    button
+        border 0
         box-shadow none
 
-#moin-searchform #moin-search-submit
+#moin-search-submit
     text-indent -9000%
     margin-left -24px
     padding 0px
@@ -784,11 +778,9 @@ a
     vertical-align middle
     cursor pointer
 
-#moin-searchform #moin-search-query
+#moin-search-query
     padding-right 20px
 
-#moin-searchform div
-    margin 0
 
 #moin-long-searchform
     padding 0
@@ -798,9 +790,6 @@ a
         margin 0
     label
         display inline
-
-#moin-search-query
-    width 50%
 
 .searchresults
     dt
@@ -1172,5 +1161,5 @@ ins
     #moin-global-tray
     #moin-local-panel
     #moin-footer
-    #moin-search
+    #moin-searchform
         display none
