--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -176,14 +176,14 @@ a.moin-mime-drawing:before{content:url("../img/moin-drawing.png");margin:0 .2em;
 .moin-diff-removed span{background-color:#f1eeb9}
 body{color:#000;background-color:#d6d5d0;font-family:Helvetica,Arial,sans-serif;background-image:url("../img/base.png")}
 p{margin:.2em .4em;font-size:1em;line-height:1.3em}
-#moin-global-tray{float:left;width:16.666666666666668%;padding:.5%;overflow:hidden}
-#moin-main-container{float:left;width:81.13333333333333%;padding:.5%}
+#moin-global-tray{float:left;width:16.55%;padding:.5%;overflow:hidden}
+#moin-main-container{float:left;width:81.095%;padding:.5%}
 #moin-main-box{background-color:#f4f4f4;border:1px solid #ccc;border-radius:6px;box-shadow:2px 2px 4px #9d9d9b;overflow:hidden}
 #moin-header{background-color:#2d2d2d;color:#fff;border-bottom:1px solid #ccc;padding:0;overflow:auto;}
 #moin-header a{color:#fff}
-#moin-content-no-panel{float:left;width:98.56746096959736%;padding:.6162695152013148%;border-right:1px solid #ccc}
-#moin-content{float:left;width:76.79260476581759%;padding:.6162695152013148%;border-right:1px solid #ccc}
-#moin-local-panel{float:left;width:20.54231717337716%;padding:.6162695152013148%;margin-left:-1px;border-left:1px solid #ccc}
+#moin-content-no-panel{float:left;width:98.307%;padding:.5%;border-right:1px solid #ccc}
+#moin-content{float:left;width:81.095%;padding:.5%;border-right:1px solid #ccc}
+#moin-local-panel{float:left;width:16.55%;padding:.5%;margin-left:-1px;border-left:1px solid #ccc}
 #moin-footer{clear:both;font-size:.8em;color:#616161;padding:.5% .5%;overflow:auto}
 #moin-breadcrumbs-location{float:left;padding:.5em;font-weight:bold}
 #moin-interwiki{vertical-align:middle;}
